--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ header {
   align-items: center;
   flex-direction: column;
   gap: 150px;
-  padding: 30px 105px;
+  padding: 50px 105px;
   padding-bottom: 50px;
 }
 
@@ -579,7 +579,7 @@ select {
 
 @media (max-width: 768px) {
   .header111 {
-    padding: 25px;
+    padding: 25px 25px 50px 25px;
     gap: 50px;
   }
 }
@@ -595,6 +595,9 @@ select {
 }
 
 @media (max-width: 375px) {
+  .header111 {
+    padding: 25px 15px 50px 15px;
+  }
   .about_media {
     max-width: 345px;
     height: 400px;
@@ -605,7 +608,7 @@ select {
     max-width: 300px;
   }
 
-  .about_header{
+  .about_header {
     font-size: 35px;
     line-height: 45px; /* 128.571% */
   }
@@ -616,99 +619,112 @@ select {
   height: 23px;
 }
 .statistics_section {
-  height: 405px;
-  width: 1440px;
+  padding: 100px 105px;
   background-color: rgba(58, 58, 58, 255);
   display: flex;
   align-items: center;
-  justify-content: center;
   gap: 30px;
 }
 .statistics_left_blue {
-  width: 390px;
-  height: 30px;
   font-family: Inter;
   font-size: 13px;
   font-weight: 400;
   line-height: 30px;
   letter-spacing: 0.15em;
   text-align: left;
-  text-underline-position: from-font;
-  text-decoration-skip-ink: none;
   color: rgba(61, 178, 255, 1);
 }
 .statistics_left_header {
-  width: 491px;
-  height: 60px;
   font-family: Inter;
   font-size: 45px;
   font-weight: 900;
   line-height: 60px;
   text-align: left;
-  text-underline-position: from-font;
-  text-decoration-skip-ink: none;
   color: white;
 }
 .statistics_left_text {
-  width: 600px;
-  height: 60px;
   font-family: Inter;
   font-size: 17px;
   font-weight: 400;
   line-height: 30px;
   text-align: left;
-  text-underline-position: from-font;
-  text-decoration-skip-ink: none;
   color: white;
 }
 .statistics_section_left {
-  width: 600px;
-  height: 180px;
+  width: 100%;
+  max-width: 600px;
 }
 .statistics_right_blue {
-  width: 285px;
-  height: 80px;
   font-family: Inter;
   font-size: 60px;
   font-weight: 900;
   line-height: 80px;
   text-align: left;
-  text-underline-position: from-font;
-  text-decoration-skip-ink: none;
   color: rgba(61, 178, 255, 1);
 }
 .statistics_right_head {
-  width: 285px;
-  height: 35px;
   font-family: Inter;
   font-size: 25px;
   font-weight: 900;
   line-height: 35px;
   text-align: left;
-  text-underline-position: from-font;
-  text-decoration-skip-ink: none;
   color: white;
 }
 .statistics_right_text {
-  width: 285px;
-  height: 60px;
   font-family: Inter;
   font-size: 17px;
   font-weight: 400;
   line-height: 30px;
   text-align: left;
-  text-underline-position: from-font;
-  text-decoration-skip-ink: none;
   color: white;
-}
-.statsitics_one {
-  width: 285px;
-  height: 205px;
 }
 .statistics_section_right {
   display: flex;
+  justify-content: space-between;
   gap: 30px;
 }
+
+.statistics_one {
+  width: 250px;
+}
+
+@media (max-width: 1310px) {
+  .statistics_section {
+    flex-direction: column;
+  }
+  .statistics_section_left {
+    max-width: 100%;
+  }
+
+  .statistics_section_right {
+    width: 100%;
+  }
+}
+
+@media (max-width: 768px) {
+  .statistics_section {
+    padding: 50px 25px;
+  }
+  .statistics_section_right {
+    flex-direction: column;
+  }
+}
+
+@media (max-width: 375px) {
+  .statistics_section {
+    padding: 50px 15px;
+  }
+  .statistics_left_header {
+    font-size: 45px;
+    line-height: 60px;
+  }
+
+  .statistics_right_blue {
+    font-size: 45px;
+    line-height: 58px; /* 128.889% */
+  }
+}
+
 .services_section {
   width: 1440px;
   height: 657px;
